prepare strategies for agnostic runtimes
